tests/syntax/bad/testfile-method_param-2.scala

class A { var x = m[]() }
object Main { def main(args: Array[String]) { } }
